@@ -1,3 +1,12 @@
+2002-01-31  Sam Steingold  <sds@gnu.org>
+
+	* record.d (mk_weakpointer): new local helper function
+	(allocate_weakpointer): new global function, uses mk_weakpointer()
+	(MAKE-WEAK-POINTER): use mk_weakpointer()
+	* lispbibl.d (allocate_weakpointer): declare as function, not macro
+	(weakpointer_broken_p): new macro
+	* io.d (pr_orecord): use it
+
 2002-01-30  Sam Steingold  <sds@gnu.org>
 
 	* io.d (pr_orecord): print EQUALP hash tables correctly
